# fabiano

./: .gitignore  README.md  caixa.py  main.py  model.py  product.txt  pyproject.toml  resultados.csv
resources/: caixa.html  caixa_2.html
tests/: test_caixa_parsing.py
