[project]
name = "fabiano"
version = "0.1.0"
description = ""
authors = [
    {name = "lvalini",email = "luisarthurbv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.45.0",
    "pydantic (>=2.12.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
playwright = "^1.56.0"

